css/_nav.scss
//
// Header / Footer
//
// ==========================================================================

header {
  background: #000;
  opacity: 0;
  transform: translate3d(0,0,0);
  -moz-transform: translate3d(0,0,0);
  -webkit-transform: translate3d(0,0,0);

  @include breakpoint($bp-huge) {
    max-height: 600px;
  }

  .fx {
    position: absolute;
    width: 100%;
    height: 100%;

    &.gradient {
      background: linear-gradient(to bottom, rgba($hilite-color-primary, 1) 0%, rgba($hilite-color-alt, 1) 70%);

      @include breakpoint($bp-landscape) {
        background: linear-gradient(to bottom, rgba($hilite-color-primary, 1) 0%, rgba($hilite-color-alt, 1) 85%);
      }

      @include breakpoint($bp-tablet) {
        background: linear-gradient(to bottom, rgba($hilite-color-primary, 1) 0%, rgba($hilite-color-alt, 1) 70%);
      }

      @include breakpoint($bp-large) {
        background: linear-gradient(to bottom, rgba($hilite-color-primary, 1) 0%, rgba($hilite-color-alt, 1) 75%);
      }
    }

    &.pattern {
      background: url(../img/bg-pattern.png) top left repeat;
      background-size: 11%;
      opacity: 0.6;

      @include breakpoint($bp-landscape) {
        background-size: 8%;
      }

      @include breakpoint($bp-tablet) {
        background-size: 7.5%;
      }

      @include breakpoint($bp-medium) {
        background-size: 6%;
      }

      @include breakpoint($bp-optimal) {
        background-size: 5%;
      }

      @include breakpoint($bp-large) {
        background-size: 4.5%;
      }

      @include breakpoint($bp-huge) {
        background-size: 52px;
      }
    }

    &.vignette {
      background: radial-gradient(ellipse at center, rgba(#000, 0) 0%, rgba(#000, 1) 85%);

      @include breakpoint($bp-tablet) {
        background: radial-gradient(ellipse at center, rgba(#000, 0) 0%, rgba(#000, 1) 85%);
      }

      @include breakpoint($bp-large) {
        background: radial-gradient(ellipse at center, rgba(#000, 0) 0%, rgba(#000, 1) 90%);
      }
    }
  }

  .inner {
    position: relative;
    overflow: hidden;
    padding-bottom: 15px;

    @include breakpoint($bp-tablet) {
      padding-top: 7%;
      padding-bottom: 10%;
    }

    @include breakpoint($bp-medium) {
      padding-top: 0;
      padding-bottom: 6%;
    }
  }

  .content {
    text-align: center;

    svg.header-splash {
      margin: 12% 0 11%;
      overflow: visible;

      @include breakpoint($bp-landscape) {
        float: left;
        max-width: 54%;
        margin: 4% 0 6.5% -2%;
      }

      @include breakpoint($bp-tablet) {
        float: none;
        max-width: 84%;
        margin: 0 0 10%;
      }

      @include breakpoint($bp-medium) {
        float: left;
        max-width: 53%;
        margin: 4% 0 7% -2%;
      }

      @include breakpoint($bp-huge) {
        max-width: 48%;
        margin-left: 0;
      }

      .title-path {
        opacity: 0.5;
        fill: #FFF;
      }

      .name-path {
        margin-top: 20px;
        opacity: 0.96;
      }
    }

    svg.logo-splash {
      width: 94%;
      margin-bottom: 14%;
      overflow: visible;

      @include breakpoint($bp-landscape) {
        position: absolute;
        top: 26%;
        right: 4%;
        max-width: 49%;
      }

      @include breakpoint($bp-tablet) {
        position: static;
        max-width: 72%;
        margin-bottom: 11%;
      }

      @include breakpoint($bp-medium) {
        position: absolute;
        top: 27%;
        right: 5%;
        width: 48%;
      }

      @include breakpoint($bp-large) {
        width: 47%;
      }

      @include breakpoint($bp-huge) {
        top: 26%;
        width: 49%;
      }

      .logo-outline-path {
        opacity: 0.75;
      }

      .logo-j-path, .logo-r-path {
        fill: rgba(#000, 0.6);
      }
    }

    p {
      width: 90%;
      margin: 0 auto 22px;
      color: rgba(#AAA, 0.95);
      text-shadow: 1px 1px 7px rgba(#000, 1);

      @include breakpoint($bp-nexus5-portrait) {
        width: 85%;
        letter-spacing: 0.05em;
      }

      @include breakpoint($bp-landscape) {
        float: left;
        clear: both;
        margin: 0 0 4% -1%;
        padding: 0;
        max-width: 42.5%;
        font-size: 0.8em;
        line-height: 23px;
        letter-spacing: 0.02em;

        &:last-of-type {
          margin-bottom: 32px;
        }
      }

      @include breakpoint($bp-tablet) {
        float: none;
        clear: none;
        margin: 0 auto 6%;
        max-width: 62%;
        font-size: 19px;
        line-height: 30px;
        letter-spacing: 0.04em;

        @include breakpoint($bp-ipad-portrait) {
          max-width: 53%;
        }
      }

      @include breakpoint($bp-medium) {
        float: left;
        clear: both;
        margin: 0 0 3% -1%;
        max-width: 39%;
        font-size: 0.98em;
        line-height: 1.8em;

        &:last-of-type {
          margin-bottom: 34px;
        }
      }

      @include breakpoint($bp-golden) {
        font-size: 1.09em;
      }


      @include breakpoint($bp-optimal) {
        font-size: 18px;
        line-height: 1.7em;
      }

      @include breakpoint($bp-default) {
        font-size: 1.2em;
      }

      @include breakpoint($bp-large) {
        max-width: 38%;
        font-size: 20px;
        letter-spacing: 0.04em;
      }

      @include breakpoint($bp-huge) {
        max-width: 34%;
        margin-left: 1%;
        letter-spacing: 0.04em;
      }
    }
  }
}


// Footer Styles
// --------------------------------------------------------------------------

footer {
  position: fixed;
  bottom: 0;
  width: 100%;
  height: 600px;
  padding-top: 325px;
  background: #000;

  .fx {
    position: absolute;
    width: 100%;
    height: 100%;

    &.gradient {
      background: linear-gradient(to bottom, rgba($hilite-color-alt, 1) 25%, rgba($hilite-color-primary, 1) 60%);
    }

    &.pattern {
      background: url(../img/bg-pattern.png) top left repeat;
      background-size: 11%;
      opacity: 0.5;

      @include breakpoint($bp-landscape) {
        background-size: 8%;
      }

      @include breakpoint($bp-tablet) {
        background-size: 7%;
      }

      @include breakpoint($bp-medium) {
        background-size: 6%;
      }

      @include breakpoint($bp-optimal) {
        background-size: 5%;
      }

      @include breakpoint($bp-large) {
        background-size: 4.5%;
      }

      @include breakpoint($bp-huge) {
        background-size: 52px;
      }
    }

    &.vignette {
      background: radial-gradient(ellipse at center, rgba(#000, 0) 0%, rgba(#000, 1) 90%);
    }
  }

  .inner {
    width: 100%;
    height: 220px;
    margin: 0 auto;
    padding-top: 65px;
    text-align: center;

    svg.footer-logo {
      opacity: 0.75;

      .logo-j-path, .logo-r-path {
        fill: rgba(#FFF, 0.9);
      }
    }
  }
}

